...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/StandardTextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/ingredients_title_tv"
        app:layout_constraintStart_toStartOf="@+id/ingredient_list_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ingredient_list_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_title_tv"
        tools:text="Graham Cracker crumbs \n Graham Cracker crumbs \n Graham Cracker crumbs \n Graham Cracker crumbs \n Graham Cracker crumbs" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_steps_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
...
