<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/recipe_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"/>

    <TextView
        android:id="@+id/empty_list_view"
        style="@style/StandardTextView"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/recycler_view_margin"
        android:drawablePadding="@dimen/text_view_margin"
        android:drawableTint="@color/colorText"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="@string/placeholder_no_recipes" />



</RelativeLayout>